--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "rsbuild-project",
-  "private": true,
   "version": "1.0.0",
   "scripts": {
     "build": "rsbuild build",
@@ -12,21 +11,31 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@elastic/datemath": "^5.0.3",
+    "@elastic/eui": "^95.10.1",
+    "@emotion/css": "^11.13.0",
+    "@emotion/react": "^11.13.3",
+    "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.13.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@commitlint/cli": "^19.0.3",
     "@commitlint/config-conventional": "^19.0.3",
-    "@biomejs/biome": "^1.8.3",
     "@rsbuild/core": "1.0.1-rc.5",
     "@rsbuild/plugin-react": "1.0.1-rc.5",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "cz-git": "^1.9.4",
     "husky": "^9.1.5",
     "lint-staged": "^15.2.10",
-    "typescript": "^5.5.2",
-    "cz-git": "^1.9.4"
+    "typescript": "^5.5.2"
   },
   "lint-staged": {
     "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
