feat: :sparkles: 创建会议、会议列表设计

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rsbuild-project",
   "version": "1.0.0",
   "scripts": {
-    "build": "rsbuild build",
+    "build": "rsbuild build --env-dir config",
     "check": "biome check --write",
     "dev": "rsbuild dev --env-dir config --open",
     "format": "biome format --write",
