--- a/config/.env
+++ b/config/.env
@@ -1,1 +1,3 @@
 PUBLIC_FIREBASE_API_KEY = AIzaSyC7fomhd2XYNqhvU8HNfDw6WJBYA9jf6Xw
+PUBLIC_ZEGOCLOUD_APP_ID = 1325415630
+PUBLIC_ZEGOCLOUD_SERVER_SECRET = 734e281298a11886c0b2c4a8f5750bff
