--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/css": "^11.13.0",
     "@emotion/react": "^11.13.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@zegocloud/zego-uikit-prebuilt": "^2.8.1",
     "firebase": "^10.13.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
